--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,17 @@
 <div class="jumbotron">
 	<h1>Hello!</h1>
 	<p>Welcome to GiftMe!  Did you procrastinate on getting a gift for your best friends birthday party again?  Did you forget that your anniversary is in a week and now your desperately thinking of a gift idea?  Well, you shouldn't have let that happen.  But look no further!  Simply pick from a category of things that your gift recipient is interested in, give us your price range, and let us find you something!  If you don't like our suggestion, move on to the next one!</p>
+
+  <form action="" method="post">
+    <input type="text" />
+    <input type="submit" value="Try me!"/>
+  </form>
+
+  <%= form_tag("/home/search", method: "get") do %>
+  <%= label_tag(:q, "Search for:") %>
+  <%= text_field_tag(:q) %>
+  <%= submit_tag("Search") %>
+  <% end %>
+
+
 </div>
